--- a/src/templates/items-list/items-style/fly/_variables.scss
+++ b/src/templates/items-list/items-style/fly/_variables.scss
@@ -28,14 +28,14 @@
   --vp-items-style-fly--meta-categories__text-transform: uppercase;
   --vp-items-style-fly--meta-categories__text-decoration: none;
   --vp-items-style-fly--meta-categories__opacity: 0.8;
-  --vp-items-style-fly--meta-categories__gap: 0.4em;
+  --vp-items-style-fly--meta-categories__gap: 0 0.4em;
   --vp-items-style-fly--meta-categories__separator: ", ";
 
   // Meta Inline.
   --vp-items-style-fly--meta-inline__font-weight: 400;
   --vp-items-style-fly--meta-inline__line-height: 2;
   --vp-items-style-fly--meta-inline__font-opacity: 0.8;
-  --vp-items-style-fly--meta-inline__gap: 1em;
+  --vp-items-style-fly--meta-inline__gap: 0 1em;
 
   // Meta Parts.
   --vp-items-style-fly--meta-part-icon__offset: 0.5em;
