--- a/src/gutenberg/components/color-picker/style.scss
+++ b/src/gutenberg/components/color-picker/style.scss
@@ -30,34 +30,16 @@
   .vpf-component-color-toggle-indicator {
     position: relative;
     display: block;
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
     padding: 0;
     margin-right: 8px;
     color: transparent;
     cursor: pointer;
-    background:
-      linear-gradient(
-        -45deg,
-        transparent 48%,
-        #ddd 0,
-        #ddd 52%,
-        transparent 0
-      );
+    background: linear-gradient(-45deg, transparent 48%, #ddd 0, #ddd 52%, transparent 0);
     border: none;
     border-radius: 50%;
-
-    > span {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      display: block;
-      background-color: currentcolor;
-      border-radius: 50%;
-      box-shadow: inset 0 0 0 1px rgb(0 0 0 / 20%);
-    }
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 20%);
   }
 
   .vpf-component-color-toggle-label {
@@ -67,21 +49,21 @@
   }
 }
 
-.vpf-component-color-picker {
-  .vpf-component-color-picker-palette {
-    margin: 0 16px;
-  }
-
-  .components-color-picker {
-    margin: 0 auto;
-  }
-
-  .components-color-palette {
-    margin: 0;
-  }
-}
-
 .vpf-component-color-picker__dropdown {
   display: block;
   width: 100%;
+}
+
+.vpf-component-color-picker__dropdown-content {
+  .components-popover__content {
+    width: 260px;
+    padding: 16px;
+  }
+
+  .components-tab-panel__tabs {
+    margin-top: -16px;
+    margin-right: -16px;
+    margin-bottom: 16px;
+    margin-left: -16px;
+  }
 }
