added the ability to display error messages in the gallery block

--- a/src/assets/css/_variables-main.scss
+++ b/src/assets/css/_variables-main.scss
@@ -8,6 +8,7 @@
   --vp-color-gray-darken: #4b4b4b;
   --vp-color-gray-light: #e8e8e8;
   --vp-color-gray-lighten: #f7f7f7;
+  --vp-color-red: #b71515;
 
   // Radius.
   --vp-border-radius: 5px;
