simplified lazy loading placeholder animation

--- a/src/assets/css/lazyload-fallback.scss
+++ b/src/assets/css/lazyload-fallback.scss
@@ -5,8 +5,7 @@
 :is(.vp-portfolio__item-img, .vp-portfolio__thumbnail-img) {
   // Extra check for lazy loading class on the inner image
   // to make sure image will be lazy loaded by Visual Portfolio.
-  &:is(.vp-has-lazyload, .vp-has-lazyloading, .vp-has-lazyloaded)::before,
-  &:is(.vp-has-lazyload, .vp-has-lazyloading, .vp-has-lazyloaded)::after {
+  &:is(.vp-has-lazyload, .vp-has-lazyloading, .vp-has-lazyloaded)::before {
     position: absolute;
     top: 0;
     right: 0;
@@ -16,23 +15,17 @@
     pointer-events: none;
     visibility: visible;
     content: "";
-    background: var(--vp-lazyload-images__background);
+    background-image: var(--vp-lazyload-images__background);
+    background-size: var(--vp-lazyload-images__background-size);
     opacity: 1;
     transition: var(--vp-lazyload-transition-duration) var(--vp-lazyload-transition-duration) opacity, var(--vp-lazyload-transition-duration) var(--vp-lazyload-transition-duration) visibility;
   }
 
-  &:is(.vp-has-lazyloading)::before,
-  &:is(.vp-has-lazyloading)::after {
+  &:is(.vp-has-lazyloading)::before {
     animation: vp-lazyload-placeholder var(--vp-lazyload-images__animation-duration) linear infinite;
   }
 
-  &:is(.vp-has-lazyload)::before {
-    background: var(--vp-lazyload-images__background-second);
-    animation-delay: var(--vp-lazyload-images__animation-second-delay);
-  }
-
-  &:is(.vp-has-lazyloaded)::before,
-  &:is(.vp-has-lazyloaded)::after {
+  &:is(.vp-has-lazyloaded)::before {
     visibility: hidden;
     opacity: 0;
   }
