--- a/src/assets/css/lazyload.scss
+++ b/src/assets/css/lazyload.scss
@@ -22,8 +22,7 @@ img.vp-lazyloaded {
 :is(.vp-portfolio__item-img, .vp-portfolio__thumbnail-img) {
   // Extra check for lazy loading class on the inner image
   // to make sure image will be lazy loaded by Visual Portfolio.
-  &:has(img:first-of-type:is(.vp-lazyload, .vp-lazyloading, .vp-lazyloaded))::before,
-  &:has(img:first-of-type:is(.vp-lazyload, .vp-lazyloading, .vp-lazyloaded))::after {
+  &:has(img:first-of-type:is(.vp-lazyload, .vp-lazyloading, .vp-lazyloaded))::before {
     position: absolute;
     top: 0;
     right: 0;
@@ -33,35 +32,28 @@ img.vp-lazyloaded {
     pointer-events: none;
     visibility: visible;
     content: "";
-    background: var(--vp-lazyload-images__background);
+    background-image: var(--vp-lazyload-images__background);
+    background-size: var(--vp-lazyload-images__background-size);
     opacity: 1;
     transition: var(--vp-lazyload-transition-duration) var(--vp-lazyload-transition-duration) opacity, var(--vp-lazyload-transition-duration) var(--vp-lazyload-transition-duration) visibility;
   }
 
-  &:has(img:first-of-type.vp-lazyloading)::before,
-  &:has(img:first-of-type.vp-lazyloading)::after {
-    animation: vp-lazyload-placeholder var(--vp-lazyload-images__animation-duration) linear infinite;
+  &:has(img:first-of-type.vp-lazyloading)::before {
+    animation: vp-lazyload-placeholder var(--vp-lazyload-images__animation-duration) ease-in-out infinite;
   }
 
-  &:has(img:first-of-type.vp-lazyload)::before {
-    background: var(--vp-lazyload-images__background-second);
-    animation-delay: var(--vp-lazyload-images__animation-second-delay);
-  }
-
-  &:has(img:first-of-type.vp-lazyloaded)::before,
-  &:has(img:first-of-type.vp-lazyloaded)::after {
+  &:has(img:first-of-type.vp-lazyloaded)::before {
     visibility: hidden;
     opacity: 0;
   }
 }
 
 @keyframes vp-lazyload-placeholder {
-  0%,
-  100% {
-    opacity: 1;
+  0% {
+    background-position: 200% 0;
   }
 
-  50% {
-    opacity: 0;
+  100% {
+    background-position: -200% 0;
   }
 }
