added enqueue and register asset functions for dev mode

--- a/src/templates/errors/style-rtl.css
+++ b/src/templates/errors/style-rtl.css
@@ -1,30 +1,1 @@
-/*!********************************************************************************************************************************************************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[4].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[4].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[4].use[3]!./src/templates/errors/style.scss ***!
-  \********************************************************************************************************************************************************************************************************************************************************/
-/**
- * Errors CSS Variables
- */
-.vp-error {
-  --vp-error_margin-b: 1em;
-  --vp-error__padding-v: 1em;
-  --vp-error__padding-h: 1.3em;
-  --vp-error__color: var(--vp-color-red);
-  --vp-error__background-color: var(--vp-color-gray-lighten);
-  --vp-error__border-width: 1px;
-  --vp-error__border-left-width: 3px;
-  --vp-error__border-color: var(--vp-color-red);
-  --vp-error__border-radius: var(--vp-border-radius);
-}
-
-/**
- * Errors style
- */
-.vp-error {
-  padding: var(--vp-error__padding-v) var(--vp-error__padding-h);
-  margin-bottom: var(--vp-error_margin-b);
-  color: var(--vp-error__color);
-  background-color: var(--vp-error__background-color);
-  border: var(--vp-error__border-width) solid var(--vp-error__border-color);
-  border-right-width: var(--vp-error__border-left-width);
-  border-radius: var(--vp-error__border-radius);
-}
+.vp-error{--vp-error_margin-b:1em;--vp-error__padding-v:1em;--vp-error__padding-h:1.3em;--vp-error__color:var(--vp-color-red);--vp-error__background-color:var(--vp-color-gray-lighten);--vp-error__border-width:1px;--vp-error__border-left-width:3px;--vp-error__border-color:var(--vp-color-red);--vp-error__border-radius:var(--vp-border-radius);background-color:var(--vp-error__background-color);border:var(--vp-error__border-width) solid var(--vp-error__border-color);border-right-width:var(--vp-error__border-left-width);border-radius:var(--vp-error__border-radius);color:var(--vp-error__color);margin-bottom:var(--vp-error_margin-b);padding:var(--vp-error__padding-v) var(--vp-error__padding-h)}
