--- a/src/templates/preview/style-rtl.css
+++ b/src/templates/preview/style-rtl.css
@@ -1,44 +1,1 @@
-/*!*********************************************************************************************************************************************************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[4].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[4].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[4].use[3]!./src/templates/preview/style.scss ***!
-  \*********************************************************************************************************************************************************************************************************************************************************/
-/* stylelint-disable selector-id-pattern */
-/* stylelint-disable declaration-no-important */
-/**
- * Preview style
- */
-html,
-body {
-  padding: 0 !important;
-  margin: 0 !important;
-}
-
-body::before {
-  content: none !important;
-}
-
-#wpadminbar {
-  display: none;
-}
-
-#vp_preview {
-  position: relative;
-  z-index: 99999;
-  width: 100%;
-  max-width: none;
-  padding: 0;
-  margin: 0;
-}
-
-.entry-content {
-  padding: 0 !important;
-  margin: 0 !important;
-}
-
-.vp-portfolio {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-#query-monitor-main {
-  display: none !important;
-}
+body,html{margin:0!important;padding:0!important}body:before{content:none!important}#wpadminbar{display:none}#vp_preview{margin:0;max-width:none;padding:0;position:relative;width:100%;z-index:99999}.entry-content{margin:0!important;padding:0!important}.vp-portfolio{margin-bottom:0;margin-top:0}#query-monitor-main{display:none!important}
