--- a/templates/items-list/sort/dropdown/_variables.scss
+++ b/templates/items-list/sort/dropdown/_variables.scss
@@ -19,7 +19,7 @@
 	--vp-sort-dropdown--items__color: var(--vp-color-gray);
 	--vp-sort-dropdown--items__background-color: var(--vp-color-gray-lighten);
 	--vp-sort-dropdown--items__border-radius: var(--vp-border-radius);
-	--vp-sort-dropdown--items__arrow: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+	--vp-sort-dropdown--items__arrow: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e);
 	--vp-sort-dropdown--items__arrow-size: 0.6em;
 	--vp-sort-dropdown--items-hover__color: var(--vp-color-gray-darken);
 	--vp-sort-dropdown--items-hover__background-color: var(--vp-color-gray-light);
