removed some useless comments which disables eslint

--- a/assets/admin/css/style.scss
+++ b/assets/admin/css/style.scss
@@ -140,7 +140,7 @@ $escaped-svg-characters: (
  */
 /* stylelint-disable-next-line selector-id-pattern */
 #menu-posts-portfolio,
-#toplevel_page_visual-portfolio-settings { // stylelint-disable-line selector-id-pattern
+#toplevel_page_visual-portfolio-settings {
 	#adminmenu & ul.wp-submenu-wrap li {
 		clear: both;
 	}
