changed gutenberg styles to import inside JS modules

--- a/gutenberg/components/elements-selector/style.scss
+++ b/gutenberg/components/elements-selector/style.scss
@@ -1,3 +1,5 @@
+@import "../../variables";
+
 .vpf-component-elements-selector-control-location {
 	position: relative;
 	// background-color: $light-gray-100;
