--- a/gutenberg/components/tiles-selector/style.scss
+++ b/gutenberg/components/tiles-selector/style.scss
@@ -1,3 +1,5 @@
+@import "../icons-selector/selector-placeholder.scss";
+
 $tiles_selector_gap: 5px !default;
 $tiles_selector_button_padding: 10px !default;
 
