added support for social stream settings in setup wizard
improved editor assets enqueue to use `enqueue_block_assets` hook

--- a/assets/admin/css/style.scss
+++ b/assets/admin/css/style.scss
@@ -47,9 +47,8 @@ $escaped-svg-characters: (
 	@return $string;
 }
 
-/*
- * Go Pro menu link
- */
+@import "../../../gutenberg/components/pro-note/style.scss";
+
 #adminmenu a[href*="https://visualportfolio.co/pricing/"],
 .wp-list-table.plugins a[href*="https://visualportfolio.co/pricing/"],
 .vpf-admin-toolbar a[href*="https://visualportfolio.co/pricing/"] {
@@ -791,83 +790,6 @@ $escaped-svg-characters: (
 	// Settings info Pro.
 	.social_pro_info > th {
 		display: none;
-	}
-}
-
-.vpf-pro-note {
-	position: relative;
-	max-width: 280px;
-	padding: 20px;
-	font-size: 13px;
-	color: #b65e96;
-	background: linear-gradient(to left, rgba(#743ad5, 20%), rgba(#d53a9d, 20%));
-
-	&::before {
-		position: absolute;
-		top: 1px;
-		right: 1px;
-		bottom: 1px;
-		left: 1px;
-		z-index: 0;
-		display: block;
-		content: "";
-		background-color: #fff6fc;
-	}
-
-	> * {
-		position: relative;
-		z-index: 1;
-	}
-
-	h3 {
-		margin-top: 0;
-		margin-bottom: 0;
-		font-size: 13px;
-		font-weight: 600;
-		color: #d53a9d;
-		text-transform: none;
-	}
-
-	p {
-		font-size: inherit !important;
-	}
-
-	ul {
-		margin: 0;
-		list-style: none;
-
-		li::before {
-			display: inline;
-			margin-bottom: 5px;
-			content: "- ";
-		}
-	}
-
-	.vpf-pro-note-description,
-	.components-base-control__help {
-		margin: 1em 0;
-	}
-
-	&-button {
-		display: inline-block;
-		padding: 7px 15px;
-		text-decoration: none;
-		background: linear-gradient(to left, #743ad5, #d53a9d);
-		border-radius: 3px;
-		transition: 0.2s filter ease, 0.2s transform ease;
-
-		&,
-		&:hover,
-		&:focus,
-		&:active {
-			color: #fff;
-		}
-
-		&:hover,
-		&:focus {
-			filter: contrast(1.5) drop-shadow(0 3px 3px rgba(213, 58, 157, 30%));
-			transform: translateY(-1px);
-		}
 	}
 }
 
