hide images bulk controls from setup wizard

--- a/gutenberg/components/gallery-control/style.scss
+++ b/gutenberg/components/gallery-control/style.scss
@@ -53,6 +53,7 @@
 		// Bulk actions
 		.vpf-component-gallery-control-item-bulk-actions {
 			display: flex;
+			margin-right: auto;
 
 			.components-base-control,
 			.components-base-control__field {
