added support for Download button in PhotoSwipe

--- a/assets/css/popup-photoswipe.scss
+++ b/assets/css/popup-photoswipe.scss
@@ -94,4 +94,18 @@
 	&.vp-pswp-no-zoom .pswp__img {
 		cursor: default;
 	}
+
+	// Custom download button.
+	.pswp__button--download {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background: none;
+
+		svg {
+			fill: #fff;
+			width: 26px;
+			height: 26px;
+		}
+	}
 }
